# fitness

./: .gitignore  README.md  fitness.db  pyproject.toml  requirements.txt  run.py
app/: admin.py  cache.py  dependencies.py  main.py
app/models/: database.py  requests.py
app/routers/: admin.py  search.py  users.py
app/services/: database_service.py  search_service.py  user_service.py
core/: cache.py
core/examples/: future_house.py  search_extract.py
core/models/: requests.py
core/services/: user_service.py
core/tools/: __init__.py  content_extractor.py  search.py
tests/: test_main.py
