[project]
name = "fitness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.121.1",
    "google-search-results>=2.4.2",
    "langchain>=0.3.25",
    "openai>=1.75.0",
    "torch>=2.7.0",
    "trafilatura>=2.0.0",
]
